force-app/main/default/objects/Pack__c/Pack__c.object-meta.xml
<CustomObject>
    <label>Pack</label>
    <nameField>
        <label>Nom du pack</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>