force-app/main/default/objects/Pack__c/fields/CodeFils__c.field-meta.xml
<CustomField>
    <fullName>CodeFils__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Fils</label>
    <referenceTo>ReferentielOptions__c</referenceTo>
    <relationshipLabel>Packs</relationshipLabel>
    <relationshipName>Packs</relationshipName>
    <type>Lookup</type>
</CustomField>