force-app/main/default/objects/Pack__c/fields/CodePere__c.field-meta.xml
<CustomField>
    <fullName>CodePere__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Père</label>
    <referenceTo>ReferentielOptions__c</referenceTo>
    <relationshipLabel>Packs (Code Père)</relationshipLabel>
    <relationshipName>Packs1</relationshipName>
    <type>Lookup</type>
</CustomField>