force-app/main/default/objects/Pack__c/fields/coeffThermique__c.field-meta.xml
<CustomField>
    <fullName>coeffThermique__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Coefficient thermique Uw/Delta R</description>
    <label>Coefficient thermique</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>