force-app/main/default/objects/Pack__c/fields/FilsAutoselectionnable__c.field-meta.xml
<CustomField>
    <fullName>FilsAutoselectionnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fils Autosélectionnable</label>
    <type>Checkbox</type>
</CustomField>