force-app/main/default/objects/Pack__c/fields/FilsSubstituable__c.field-meta.xml
<CustomField>
    <fullName>FilsSubstituable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fils Substituable</label>
    <type>Checkbox</type>
</CustomField>