force-app/main/default/objects/Pack__c/fields/IDPack__c.field-meta.xml
<CustomField>
    <fullName>IDPack__c</fullName>
    <externalId>true</externalId>
    <label>ID Pack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>