force-app/main/default/objects/Pack__c/fields/IDRevision__c.field-meta.xml
<CustomField>
    <fullName>IDRevision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Révision</label>
    <referenceTo>Revision_Pack__c</referenceTo>
    <relationshipLabel>Packs</relationshipLabel>
    <relationshipName>Packs</relationshipName>
    <type>Lookup</type>
</CustomField>