force-app/main/default/objects/Pack__c/fields/Mode_de_Selection__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_Selection__c</fullName>
    <description>Mode de sélection du regroupement
GC_pack.pere_selection</description>
    <label>Mode de Sélection</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>