force-app/main/default/objects/Pack__c/fields/ModeValorisation__c.field-meta.xml
<CustomField>
    <fullName>ModeValorisation__c</fullName>
    <label>Mode Valorisation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>