force-app/main/default/objects/Pack__c/fields/Ordredaffichage__c.field-meta.xml
<CustomField>
    <fullName>Ordredaffichage__c</fullName>
    <label>Ordre d&apos;affichage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>