force-app/main/default/objects/Pack__c/fields/TypeRegroupement__c.field-meta.xml
<CustomField>
    <fullName>TypeRegroupement__c</fullName>
    <label>Type Regroupement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>