force-app/main/default/objects/Pack__c/listViews/CORRECTIF_04_06_2014.listView-meta.xml
<ListView>
    <fullName>CORRECTIF_04_06_2014</fullName>
    <columns>NAME</columns>
    <columns>IDRevision__c</columns>
    <columns>CodePere__c</columns>
    <columns>CodeFils__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>6/4/2014 12:00 AM</value>
    </filters>
    <label>CORRECTIF 04/06/2014</label>
    <language>fr</language>
</ListView>