force-app/main/default/objects/Pack__c/listViews/CORRECTIF_12_05_2014.listView-meta.xml
<ListView>
    <fullName>CORRECTIF_12_05_2014</fullName>
    <columns>NAME</columns>
    <columns>IDRevision__c</columns>
    <columns>CodePere__c</columns>
    <columns>CodeFils__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>5/12/2014 12:00 AM</value>
    </filters>
    <label>CORRECTIF 12/05/2014</label>
    <language>fr</language>
</ListView>