force-app/main/default/objects/Pack__c/listViews/CORRECTIF_29_04_2015.listView-meta.xml
<ListView>
    <fullName>CORRECTIF_29_04_2015</fullName>
    <columns>NAME</columns>
    <columns>IDRevision__c</columns>
    <columns>CodeFils__c</columns>
    <columns>CodePere__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/29/2015 12:00 AM</value>
    </filters>
    <label>CORRECTIF 29-04-2015</label>
    <language>fr</language>
</ListView>