force-app/main/default/objects/Pack__c/listViews/OPCLI2016_OPFOIRES16.listView-meta.xml
<ListView>
    <fullName>OPCLI2016_OPFOIRES16</fullName>
    <columns>NAME</columns>
    <columns>IDRevision__c</columns>
    <columns>CodePere__c</columns>
    <columns>CodeFils__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>1/12/2016 12:00 AM</value>
    </filters>
    <label>OPCLI2016_OPFOIRES16_OP0116THER</label>
    <language>fr</language>
</ListView>