force-app/main/default/objects/Pack__c/listViews/PROMO_FLASH_DU_19112015.listView-meta.xml
<ListView>
    <fullName>PROMO_FLASH_DU_19112015</fullName>
    <columns>NAME</columns>
    <columns>IDRevision__c</columns>
    <columns>CodePere__c</columns>
    <columns>CodeFils__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>11/19/2015 12:00 AM</value>
    </filters>
    <label>PROMO FLASH DU 19/11/2015</label>
    <language>fr</language>
</ListView>