force-app/main/default/objects/Pack__c/listViews/TARIF_29_04_2014.listView-meta.xml
<ListView>
    <fullName>TARIF_29_04_2014</fullName>
    <columns>NAME</columns>
    <columns>IDPack__c</columns>
    <columns>IDRevision__c</columns>
    <columns>CodePere__c</columns>
    <columns>CodeFils__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/29/2014 12:00 AM</value>
    </filters>
    <label>TARIF 29/04/2014</label>
    <language>fr</language>
</ListView>